# telescopestatus

./: .gitignore  LICENSE  README.md  app.py  environment.yml  pyproject.toml
.github/workflows/: main.yml  testing.yml
src/: __init__.py  __main__.py  data_fetching.py  graphs.py
src/page_parts/: page.py
telescopestatus/: __init__.py  data.py
telescopestatus/src/: data.py
tests/: test_data.py  test_sample.py
